# jsm-helpdesk-inbox

./: .dockerignore  .gitignore  Dockerfile  README.md  compose.yaml  pyproject.toml
.github/workflows/: ci.yml
app/: imap_client.py  main.py
app/chains/: extract_request_fields.py  extract_request_type.py  prompts.py
app/core/: config.py  constants.py
app/gmail/: __init__.py  gmail.py
app/graphs/: builder.py  state.py
app/graphs/nodes/: __init__.py  create_ticket.py  fetch_fields_names.py  fill_request_fields.py  get_request_type.py  send_response.py
app/jsm/: __init__.py  service_desk.py
app/models/: message.py  request_body.py  request_field.py  request_output.py  valid_value.py
app/utils/: __init__.py  logger.py  utils.py
src/: imap_client.py  main.py
src/chains/: prompts.py
src/core/: config.py  responses_templates.py
src/gmail/: gmail.py
src/graphs/: builder.py  context.py  state.py
src/graphs/nodes/: __init__.py  get_request_type.py
src/graphs/nodes/routing_functions/: __init__.py  can_create_ticket.py  can_fetch_fields.py
src/models/: __init__.py  request_type.py  valid_value.py
src/utils/: logger.py
tests/: test_utils.py
